tests/purs/failing/InfiniteKind.purs
-- @shouldFailWith InfiniteKind 

module Main where

data F a = F (a a)
