tests/purs/failing/InfiniteKind.out
Error found:
in module [33mMain[0m
at tests/purs/failing/InfiniteKind.purs:5:17 - 5:18 (line 5, column 17 - line 5, column 18)

  An infinite kind was inferred for a type:
  [33m          [0m
  [33m  t5 -> t6[0m
  [33m          [0m

while checking that type [33ma[0m
  has kind [33mt0[0m
while inferring the kind of [33ma a[0m
in type constructor [33mF[0m

where [33mt0[0m is an unknown type

See https://github.com/purescript/documentation/blob/master/errors/InfiniteKind.md for more information,
or to contribute content related to this error.

